--- a/web_socket_server/index.html
+++ b/web_socket_server/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <div style="display:flex; justify-content:space-between">
-      <h1>Posscart</h1>
+      <div>
+        <h1>Posscart</h1>
+        <div id="gamepad-info"></div>
+      </div>
       <img src="http://localhost:8080/video" alt="Video Stream"></img>
       <div>
         <textarea id="messages" rows="10" cols="30" readonly></textarea><br><br>
@@ -38,6 +41,83 @@
         ws.onclose = function() {
             messages.value += 'WebSocket connection closed\n';
         };
+    </script>
+    <script>
+        const gamepadInfoContainer = document.getElementById("gamepad-info");
+        const gamepads = {};
+
+        // Send gamepad data to the server
+        function sendGamepadData() {
+            const connectedGamepads = navigator.getGamepads();
+            const gamepadData = {};
+
+            // Collect the status of each connected gamepad
+            for (let i = 0; i < connectedGamepads.length; i++) {
+                const gamepad = connectedGamepads[i];
+                if (gamepad) {
+                    gamepadData[gamepad.index] = {
+                        id: gamepad.id,
+                        axes: gamepad.axes.slice(0, 3).map(a => a.toFixed(1)),
+                        // buttons: gamepad.buttons.map(button => button.pressed)
+                    };
+                }
+            }
+
+            // Send the data to the server (replace with WebSocket or AJAX as per your server setup)
+            // fetch("/update_gamepads", {
+            //     method: "POST",
+            //     headers: {
+            //         "Content-Type": "application/json"
+            //     },
+            //     body: JSON.stringify(gamepadData)
+            // });
+            // console.log(JSON.stringify(gamepadData))
+        }
+
+        // Update the gamepad info displayed on the webpage
+        function updateGamepadInfo() {
+            gamepadInfoContainer.innerHTML = '';
+            for (const gamepadId in gamepads) {
+                let gamepad = gamepads[gamepadId];
+                gamepad = {
+                    id: gamepad.id,
+                    axes: [gamepad.axes[1].toFixed(1), gamepad.axes[2].toFixed(1)],
+                    buttons: gamepad.buttons.map(button => button.pressed)
+                }
+                const div = document.createElement("div");
+                div.classList.add("gamepad");
+                div.innerHTML = `
+                    <h3>Gamepad: ${gamepad.id}</h3>
+                    <p>Axes: ${gamepad.axes.join(", ")}</p>
+                    <p>Buttons: ${gamepad.buttons.join(", ")}</p>
+                `;
+                gamepadInfoContainer.appendChild(div);
+            }
+        }
+
+        // Poll for gamepad status every 100ms
+        function pollGamepads() {
+            sendGamepadData();
+            updateGamepadInfo();
+            requestAnimationFrame(pollGamepads);
+        }
+
+        // Start polling when gamepads are connected
+        window.addEventListener("gamepadconnected", (event) => {
+            const gamepad = event.gamepad;
+            gamepads[gamepad.index] = gamepad;
+            console.log("Gamepad connected:", gamepad.id);
+        });
+
+        // Handle gamepad disconnection
+        window.addEventListener("gamepaddisconnected", (event) => {
+            const gamepad = event.gamepad;
+            delete gamepads[gamepad.index];
+            console.log("Gamepad disconnected:", gamepad.id);
+        });
+
+        // Start the polling loop
+        pollGamepads();
     </script>
 </body>
 </html>
