--- a/web_socket_server/index.html
+++ b/web_socket_server/index.html
@@ -48,20 +48,14 @@
         // Send gamepad data to the server
         function sendGamepadData() {
             const connectedGamepads = navigator.getGamepads();
-            const gamepadData = {};
 
             // Collect the status of each connected gamepad
-            for (let i = 0; i < connectedGamepads.length; i++) {
-                const gamepad = connectedGamepads[i];
-                if (gamepad) {
-                    gamepadData[gamepad.index] = // {
-                        // id: gamepad.id,
-                        // axes: gamepad.axes.slice(1, 2).map(a => a.toFixed(1)),
-                        gamepad.axes.slice(1, 3).map(a => a.toFixed(1));
-                        // buttons: gamepad.buttons.map(button => button.pressed)
-                    // };
-                }
-            }
+            const gamepadData = connectedGamepads.map((gamepad) => {
+                return [
+                    Math.round(-255 + (gamepad.axes[1] - -1) * (255 - -255) / (1 - -1)),
+                    Math.round(0 + (gamepad.axes[2] - -1) * (180 - 0) / (1 - -1))
+                ] 
+            })
 
             // Send the data to the server (replace with WebSocket or AJAX as per your server setup)
             // fetch("/update_gamepads", {
